--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             data-aos-duration="1500">
                 <div class="navbar">
                     <div class="logo"> 
-                        <a href="/index.html"> <img src="images/logopic.png" width="90px" height="90px" id="logo" ></a>
+                        <a href="./index.html"> <img src="images/logopic.png" width="90px" height="90px" id="logo" ></a>
                     </div>
                     <nav>
                         <ul>
