--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     </div>
                     <nav>
                         <ul>
-                            <li><a href=""> Home </a></li>
-                            <li><a href=""> Product </a></li>
+                            <li><a href="./index.html"> Home </a></li>
+                            <li><a href="./product-page.html"> Product </a></li>
                             <li><a href=""> About </a></li>
                             <li><a href=""> Contact Us </a></li>
                             <li><a href=""> Account </a></li>
@@ -176,6 +176,9 @@
 <div class="line"></div>
 
 <div class="footer">
+<div class="logo-footer">
+    <img src="images/logopic.png"height="150px" width="150px">
+</div>
 
 </div>
 
