--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <a href="" class="btn"> Shop Now  &#8594;</a>
             </div>
             <div class="image-exclusive-col">
-                <img src="./images/exclusive.jpg" alt="">
+                <img src="./images/exclusive.jpg" id="exclusive-img">
             </div>
             
         </div>
