--- a/product-page.html
+++ b/product-page.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modern walk | Products</title>
+    <link rel="icon" href="images/logopic.png">
     <!--  CSS Link  -->
     <link rel="stylesheet" href="/Product-page/product-css.css">
      <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -44,7 +45,7 @@
     <!---  Header Finished  -->
 
 
-    
+
 
 </body>
 </html>
