--- a/product-page.html
+++ b/product-page.html
@@ -42,8 +42,81 @@
     
 
 </div>
+</div>
     <!---  Header Finished  -->
 
+
+        <div class="imgcontainer">
+            <img src="./images/exclusive.jpg" id="img1" >
+        </div>
+
+   
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!----- Footer  -->
+    <div class="line"></div>
+
+    <div class="footer">
+    <div class="logo-footer">
+        <img src="images/logopic.png"height="150px" width="150px">
+    </div>
+    <div class="logos">
+        <h3 > Follow Us</h3>
+        <a href="https://www.facebook.com/diwasdh" target="_blank"><i class="fab fa-facebook" id="facebook" ></i></a>
+        <a href="https://www.instagram.com/diwas.dhakal/" target="_blank"><i class="fab fa-instagram" id="instagram"></i> </a>   
+    </div>
+
+    <div class="address">
+        <h3>
+            Address <br><br>
+            Balkot Chowk <br>
+            Bhaktapur <br>
+            Nepal <br>
+        </h3>
+    </div>
+
+    <div class="contacts">
+        <h3>
+            Contact Us<br><br>
+            (977)981456655 <br>
+            info@modernwalk.com
+        </h3>
+    </div>
+</div>
+
+    <!----- Footer  Ended -->
 
 
 
