--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
    
         <!--------  category  -------------->
-        
+        <div class="page2">
         <div 
         class="category" >
             <div class="small-container">
@@ -146,7 +146,7 @@
             </div>
         </div>
     </div>
-
+</div>
     <!--   Exclusive Product   -->
     <div class="exclusive-wrapper">
     <div class="exclusive-container">
@@ -175,11 +175,32 @@
 <!-----    Footer       -->
 <div class="line"></div>
 
-<div class="footer">
-<div class="logo-footer">
-    <img src="images/logopic.png"height="150px" width="150px">
-</div>
+    <div class="footer">
+    <div class="logo-footer">
+        <img src="images/logopic.png"height="150px" width="150px">
+    </div>
+    <div class="logos">
+        <h3 > Follow Us</h3>
+        <a href="https://www.facebook.com/diwasdh" target="_blank"><i class="fab fa-facebook" id="facebook" ></i></a>
+        <a href="https://www.instagram.com/diwas.dhakal/" target="_blank"><i class="fab fa-instagram" id="instagram"></i> </a>   
+    </div>
 
+    <div class="address">
+        <h3>
+            Address <br><br>
+            Balkot Chowk <br>
+            Bhaktapur <br>
+            Nepal <br>
+        </h3>
+    </div>
+
+    <div class="contacts">
+        <h3>
+            Contact Us<br><br>
+            (977)981456655 <br>
+            info@modernwalk.com
+        </h3>
+    </div>
 </div>
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
