--- a/index.html
+++ b/index.html
@@ -57,25 +57,17 @@
         <div 
         class="category" >
             <div class="small-container">
-                <div class="row"
-                data-aos="fade-up"
-                data-aos-duration="8s">
-                    <div class="category-col"
-                    data-aos="fade-up-left"
-                    data-aos-duration="1000">
+                <div class="row">
+                    <div class="category-col">
                         <img src="images/product-tshirt.jpg" id="product">
                         <h4 id="name"> Top Wear </h4>
                     </div>
-                    <div class="category-col"
-                    data-aos="fade-up-left"
-                    data-aos-duration="1800">
+                    <div class="category-col">
                         <img src="images/product-shoes.jpg"id="product" >
                         <h4 id="name"> Foot Wear </h4>
             
                     </div>
-                    <div class="category-col"
-                    data-aos="fade-up-left"
-                    data-aos-duration="2600">
+                    <div class="category-col">
                         <img src="images/bottom-wear.jpg" id="product"  >
                         <h4 id="name"> Bottom Wear </h4>
                     </div>
@@ -89,9 +81,7 @@
         <!-------------------  Featured Product   ----------------------->
      <div class="small-container">
         <h2 class="title">Featured Products</h2>
-        <div class="row"
-        data-aos="fade-down"
-        data-aos-duration="2500">
+        <div class="row">
             <div class="product-col">
                 <img src="images/product-tshirt.jpg" >
                 <h4>Black T-shirt</h4>
